Erros corrigidos
